# Lift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  GenerateProjectsVS2017.bat  GenerateProjectsVS2019.bat  LICENSE  Lift.sln  README.md  build_windows.bat  imgui.ini  premake5.lua  vcpkg_linux.sh  vcpkg_windows.bat
Lift/: CMakeLists.txt  GraphicsContext.cpp  Lift.vcxproj  Lift.vcxproj.filters  OpenGLContext.cpp  OpenGLContext.h  Util.cpp  Util.h  imgui.ini
Lift/res/ptx/: device_programs.ptx
Lift/src/: Application.cpp  Application.h  Core.h  Layer.h  Lift.h  Log.cpp  Main.h  Sandbox.cpp  Util.cpp  Util.h  Window.h  pch.h
Lift/src/Core/: Layer.h  Timer.h  Util.cpp  Util.h
Lift/src/Cuda/: ParallelogramLight.cuh  any_hit.cu  closest_hit.cu  closest_hit_light.cu  draw_color.cu  exception.cu  light_definition.cuh  light_sample.cu  material_parameter.cuh  miss.cu  optixPathTracer.cu  parallelogram.cu  per_ray_data.cuh  random.cuh  ray_generation.cu  ray_payload.cuh  raygeneration.cu  shader_common.cuh  triangle_bounding_box.cu  triangle_intersection.cu  vertex_attributes.cuh
Lift/src/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Lift/src/ImGui/: ImguiLayer.cpp  ImguiLayer.h
Lift/src/Lift/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Main.h  Window.h
Lift/src/Renderer/: Buffer.cpp  Buffer.h  BufferView.h  CudaBuffer.h  CudaOutputBuffer.cpp  CudaOutputBuffer.h  FrameBuffer.cpp  FrameBuffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Record.h  RenderCommand.cpp  RenderCommand.h  RenderFrame.cpp  RenderFrame.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Lift/src/Scene/: Aabb.cpp  Aabb.h  GeometryData.h  Light.h  MaterialData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Sphere.h
Lift/src/cuda/: device_programs.cu  launch_parameters.cuh  launch_parameters.h  local_geometry.h  math_constructors.h  random.cuh  whitted.cu
src/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Lift.h  Main.h  Options.cpp  RayTracer.cpp  RayTracer.h  Sandbox.cpp  SceneList.cpp  UserInterface.cpp  UserInterface.h  algorithm_list.cpp  algorithm_list.h  application.cpp  application.h  application_old.cpp  application_old.h  core.h  imgui.ini  imgui_layer.h  lift.h  main.cpp  main.h  options.cpp  options.h  pch.h  properties.cpp  properties.h  ray_tracer.cpp  ray_tracer.h  renderer.cpp  renderer.h  sandbox.cpp  scene_list.cpp  scene_list.h  user_settings.h
src/Assets/: CornellBox.cpp  Model.cpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  UniformBuffer.cpp  Vertex.hpp  camera.cpp  camera.h  cornell_box.cpp  cornell_box.h  material.h  model.h  procedural.h  scene.h  sphere.h  texture.h  texture_image.cpp  texture_image.h  uniform_buffer.cpp  uniform_buffer.h  vertex.h
src/Utilities/: Console.cpp  Console.hpp
src/Vulkan/: Application.cpp  DebugUtilsMessenger.cpp  DepthBuffer.cpp  DescriptorSetManager.cpp  DescriptorSets.cpp  Device.cpp  DeviceMemory.cpp  Image.cpp  Instance.cpp  Sampler.cpp  ShaderModule.cpp  SwapChain.cpp  Vulkan.cpp  Window.cpp
src/Vulkan/RayTracing/: AccelerationStructure.cpp  BottomLevelAccelerationStructure.cpp  DeviceProcedures.cpp  RayTracingPipeline.cpp  ShaderBindingTable.cpp  TopLevelAccelerationStructure.cpp
src/assets/: camera.cpp  camera.h  cornell_box.cpp  cornell_box.h  lights.h  mateiral.cpp  material.cpp  material.h  model.cpp  model.h  scene.cpp  scene.h  texture.cpp  texture.h  texture_image.h  uniform_buffer.cpp  uniform_buffer.h  vertex.h
src/core/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Profiler.cpp  Profiler.h  Timer.cpp  Timer.h  Util.cpp  glm.h  input.cpp  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  profiler.cpp  profiler.h  timer.cpp  timer.h  util.cpp  util.h  utilities.cpp  utilities.h  window.h
src/core/io/: Log.cpp  Log.h  log.cpp  log.h  tiny_gltf.h
src/core/os/: Input.h  Window.h  input.cpp  input.h  key_codes.h  window.h
src/cuda/: buffer_view.h  cuda_util.cuh  device_programs.cu  geometry_data.h  launch_parameters.h  light.h  local_geometry.h  material_data.h  math_constructors.h  path_tracer.cu  preprocessor.h  random.cuh  vec_math.h  whitted_ray_tracer.cu
src/denoiser/: denoiser_optix.cpp  denoiser_optix.h
src/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  application_event.h  event.h  key_event.h  mouse_event.h
src/imgui/: ImguiLayer.cpp  ImguiLayer.h  imgui_build.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_layer.cpp  imgui_layer.h  ui_elements.h
src/platform/nvvk/: allocator_dedicated_vk.hpp
src/platform/nvvkpp/: allocator_dedicated_vkpp.hpp  appbase_vkpp.hpp
src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  PixelBuffer.cpp  PixelBuffer.h  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_display.cpp  opengl_display.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_vertex_array.cpp  opengl_vertex_array.h  pixel_buffer.cpp  (+1 more)
src/renderer/: Buffer.cpp  Buffer.h  BufferView.h  CudaBuffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Record.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  buffer.cpp  buffer.h  buffer_view.h  cuda_buffer.h  cuda_output_buffer.h  frame_buffer.cpp  graphics_context.h  optix_context.cpp  optix_context.h  record.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  (+2 more)
src/scene/: Aabb.h  GeometryData.h  MaterialData.h  Mesh.h  Scene.cpp  Scene.h  aabb.cpp  aabb.h  geometry_data.h  light.h  material_data.h  mesh.h  scene.cpp  scene.h
(+474 files in other folders)
